# server/api/model_level_override_row.go
@@ -1,0 +1,22 @@
+/*
+ * Nuxt Backend
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+// LevelOverrideRow - 用于覆盖飞行员升级日期的行
+type LevelOverrideRow struct {
+
+	// 员工号-SpecificLevel
+	Id string `json:"id,omitempty"`
+
+	Level SpecificLevel `json:"level,omitempty"`
+
+	// 要覆盖的飞行员升级日期时间戳
+	LevelDate float32 `json:"levelDate,omitempty"`
+}
