# server/api/model_main_sheet_row.go
@@ -1,0 +1,78 @@
+/*
+ * Nuxt Backend
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+// MainSheetRow - 总表数据中的行信息，由服务器发送给前端，包含飞行员的基本信息和所有Level获得时间
+type MainSheetRow struct {
+
+	// 员工号
+	StaffID string `json:"staffID,omitempty"`
+
+	// 员工姓名
+	Name string `json:"name,omitempty"`
+
+	// 当前行政部门
+	CurrentDepartment string `json:"currentDepartment,omitempty"`
+
+	// 在三大队时的最后一个行政部门
+	LastDepartment3dd string `json:"lastDepartment3dd,omitempty"`
+
+	HighestLevel SpecificLevel `json:"highestLevel,omitempty"`
+
+	// F1升级日期时间戳
+	F1 float32 `json:"F1,omitempty"`
+
+	// F2升级日期时间戳
+	F2 float32 `json:"F2,omitempty"`
+
+	// F2b升级日期时间戳
+	F2b float32 `json:"F2b,omitempty"`
+
+	// F3升级日期时间戳
+	F3 float32 `json:"F3,omitempty"`
+
+	// F3b升级日期时间戳
+	F3b float32 `json:"F3b,omitempty"`
+
+	// F4升级日期时间戳
+	F4 float32 `json:"F4,omitempty"`
+
+	// F5升级日期时间戳
+	F5 float32 `json:"F5,omitempty"`
+
+	// M升级日期时间戳
+	M float32 `json:"M,omitempty"`
+
+	// J升级日期时间戳
+	J float32 `json:"J,omitempty"`
+
+	// A1升级日期时间戳
+	A1 float32 `json:"A1,omitempty"`
+
+	// A2升级日期时间戳
+	A2 float32 `json:"A2,omitempty"`
+
+	// A2b升级日期时间戳
+	A2b float32 `json:"A2b,omitempty"`
+
+	// Ta升级日期时间戳
+	Ta float32 `json:"Ta,omitempty"`
+
+	// Tb升级日期时间戳
+	Tb float32 `json:"Tb,omitempty"`
+
+	// C升级日期时间戳
+	C float32 `json:"C,omitempty"`
+
+	// Tc升级日期时间戳
+	Tc float32 `json:"Tc,omitempty"`
+
+	OverrideStatus OverrideStatus `json:"overrideStatus,omitempty"`
+}
