# server/api/model_override_status.go
@@ -1,0 +1,17 @@
+/*
+ * Nuxt Backend
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+// OverrideStatus - 在 MainSheetRow 中代表某个标准是否有Override，不单独使用
+type OverrideStatus struct {
+
+	// 在MainSheetRow中代表某个标准是否有Override
+	ComponentsSchemasSpecificLevel bool `json:"#/components/schemas/SpecificLevel,omitempty"`
+}
