# server/api/model_pilot_info.go
@@ -1,0 +1,26 @@
+/*
+ * Nuxt Backend
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+
+// PilotInfo - 飞行员基本信息
+type PilotInfo struct {
+
+	// 员工号
+	StaffID string `json:"staffID,omitempty"`
+
+	// 员工姓名
+	Name string `json:"name,omitempty"`
+
+	// 当前行政部门
+	CurrentDepartment string `json:"currentDepartment,omitempty"`
+
+	// 在三大队时的最后一个行政部门
+	LastDepartment3dd string `json:"lastDepartment3dd,omitempty"`
+}
