# server/api/model_specific_level.go
@@ -1,0 +1,32 @@
+/*
+ * Nuxt Backend
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package api
+// SpecificLevel : 所有的飞行员等级
+type SpecificLevel string
+
+// List of SpecificLevel
+const (
+	F1 SpecificLevel = "F1"
+	F2 SpecificLevel = "F2"
+	F2B SpecificLevel = "F2b"
+	F3 SpecificLevel = "F3"
+	F3B SpecificLevel = "F3b"
+	F4 SpecificLevel = "F4"
+	F5 SpecificLevel = "F5"
+	M SpecificLevel = "M"
+	J SpecificLevel = "J"
+	A1 SpecificLevel = "A1"
+	A2 SpecificLevel = "A2"
+	A2B SpecificLevel = "A2b"
+	TA SpecificLevel = "Ta"
+	TB SpecificLevel = "Tb"
+	C SpecificLevel = "C"
+	TC SpecificLevel = "Tc"
+)
